<resources>
    <string name="app_name">AndroidView</string>
    <string name="title_home">Moje ankete</string>
    <string name="title_dashboard">Pridružene ankete</string>
    <string name="add_button">Dodaj</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="enter_question">Unesi pitanje</string>
    <string name="enter_description">Unesi opis</string>
    <string name="enter_answer">Unesi izbor</string>
    <string name="add_answer">Dodaj izbor</string>
    <string name="allow_multiple_votes">Dozvoli višestruko glasanje</string>
    <string name="allow_voters_to_add_answers">Dozvoli glasačima da dodaju odgovore</string>
    <string name="show_detail_of_voter">Prikaži detalje glasača</string>
    <string name="select_voting_deadline">Izaberi rok trajanja</string>
    <string name="poll_with_password">Zaštićeno glasanje</string>
    <string name="create_password">Kreiraj lozinku</string>
    <string name="action_create">Kreiraj</string>


    <string name="hint_enter_password">Unesi lozinku</string>
    <string name="action_join">Pridruži se</string>

    <!-- Strings for Login Activity -->
    <string name="email">Email ili Korisničko ime</string>
    <string name="password">Lozinka</string>
    <string name="login">Prijavi me</string>
    <string name="goto_signup">Kreiraj nalog</string>

    <!-- Strings for Signup Activity -->
    <string name="username">Kreiraj Korisničko ime</string>
    <string name="signup">Kreiraj nalog</string>
    <string name="new_username">Novo Korisničko ime</string>
    <string name="new_password">Lozinka</string>
    <string name="repeat_password">Ponovi lozinku</string>
    <string name="remove_answer">remove</string>


</resources>