<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.CreateFormFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/questionInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="question"
            android:hint="@string/enter_question"
            android:inputType="textCapSentences"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/descriptionInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="description"
            android:hint="@string/enter_description"
            android:inputType="textCapSentences"
            android:minHeight="48dp" />

        <LinearLayout
            android:id="@+id/answerContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/firstRemoveButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_remove"
                    android:contentDescription="@string/remove_answer"
                    android:minHeight="48dp"/>

                <EditText
                    android:id="@+id/answerInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/enter_answer"
                    android:autofillHints="answer"
                    android:inputType="textCapSentences"
                    android:minHeight="48dp" />

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/addAnswerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_answer" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/multipleVotesSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/allow_multiple_votes"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/allowAddAnswersSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/allow_voters_to_add_answers"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/showVoterDetailSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show_detail_of_voter"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <!-- For voting deadline selection, you might need a more complex implementation
             like a DatePicker or a dialog to select the date and time. Here we use a Button
             as a placeholder to show the date picker dialog -->

        <Button
            android:id="@+id/deadlineButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_voting_deadline" />
        <TextView
            android:id="@+id/selectedDateTimeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/pollWithPasswordSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/poll_with_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/copyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_copy"
                android:visibility="gone" />

            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:inputType="textVisiblePassword"
                android:focusable="false"
                android:clickable="false"
                android:cursorVisible="false"
                android:background="@android:color/transparent"
                android:autofillHints="password"
                android:visibility="gone" />
        </LinearLayout>



        <Button
            android:id="@+id/joinButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="@string/action_create" />

    </LinearLayout>
</ScrollView>
